MDEV-16542 Fix ALTER TABLE FORCE to upgrade temporal types